--- a/ports/java/openjdk7/diffs/Makefile.diff
+++ b/ports/java/openjdk7/diffs/Makefile.diff
@@ -1,4 +1,4 @@
---- Makefile.orig	2013-06-25 21:15:15.611688000 +0000
+--- Makefile.orig	2013-08-14 08:33:51.379805000 +0000
 +++ Makefile
 @@ -15,10 +15,13 @@ MASTER_SITES=	http://download.java.net/o
  		http://icedtea.classpath.org/download/drops/:jaxws \
@@ -27,7 +27,14 @@
  
  OPTIONS_DEFINE=		DEBUG POLICY TZUPDATE
  OPTIONS_DEFAULT=	POLICY TZUPDATE
-@@ -64,9 +66,12 @@ RUN_DEPENDS+=	javavm:${PORTSDIR}/java/ja
+@@ -58,15 +60,19 @@ LIB_DEPENDS+=	freetype:${PORTSDIR}/print
+ 		asound:${PORTSDIR}/audio/alsa-lib
+ BUILD_DEPENDS+=	zip:${PORTSDIR}/archivers/zip \
+ 		unzip:${PORTSDIR}/archivers/unzip \
++		javavm:${PORTSDIR}/java/javavmwrapper \
+ 		${LOCALBASE}/include/cups/cups.h:${PORTSDIR}/print/cups-client
+ RUN_DEPENDS+=	javavm:${PORTSDIR}/java/javavmwrapper \
+ 		${LOCALBASE}/lib/X11/fonts/dejavu:${PORTSDIR}/x11-fonts/dejavu
  
  USE_DOS2UNIX=	jdk/src/share/classes/com/sun/org/apache/xml/internal/security/resource/xmlsecurity_en.properties
  
@@ -41,7 +48,7 @@
  NOPRECIOUSMAKEVARS=	yes
  
  ONLY_FOR_ARCHS=	i386 amd64
-@@ -76,7 +81,7 @@ MAKE_ENV+=	LANG="C" \
+@@ -76,7 +82,7 @@ MAKE_ENV+=	LANG="C" \
  		LC_ALL="C" \
  		JAVA_HOME="" \
  		CLASSPATH="" \
@@ -50,7 +57,7 @@
  		MAKEFLAGS="" \
  		ALT_BOOTDIR="${BOOTSTRAPJDKDIR}" \
  		ALT_FREETYPE_HEADERS_PATH="${LOCALBASE}/include" \
-@@ -101,10 +106,7 @@ MAKE_ENV+=	LANG="C" \
+@@ -101,10 +107,7 @@ MAKE_ENV+=	LANG="C" \
  		BUILD_NUMBER="b${PORT_BUILD_NUMBER}"
  
  MAKE_ENV+=	HOTSPOT_BUILD_JOBS=${MAKE_JOBS_NUMBER}
@@ -62,7 +69,7 @@
  
  SECURITY_ICONS= security-icon-bw16.png \
  		security-icon-bw24.png \
-@@ -121,6 +123,10 @@ SECURITY_ICONS= security-icon-bw16.png \
+@@ -121,6 +124,10 @@ SECURITY_ICONS= security-icon-bw16.png \
  
  .include <bsd.port.options.mk>
  
@@ -73,7 +80,7 @@
  .if empty(PORT_OPTIONS:MDEBUG)
  MAKE_ENV+=	ALT_OBJCOPY="/nonexistent"
  .endif
-@@ -129,23 +135,7 @@ MAKE_ENV+=	ALT_OBJCOPY="/nonexistent"
+@@ -129,23 +136,7 @@ MAKE_ENV+=	ALT_OBJCOPY="/nonexistent"
  RUN_DEPENDS+=  ${LOCALBASE}/share/java/zi:${PORTSDIR}/java/java-zoneinfo
  .endif
  
@@ -98,7 +105,19 @@
  
  post-extract:
  	# Move icons to their new home.
-@@ -180,8 +170,8 @@ do-install:
+@@ -163,6 +154,11 @@ post-patch:
+ 		${WRKSRC}/jdk/make/javax/crypto/Makefile
+ .endif
+ 
++# override do-build to filter out _MAKE_JOBS to enable parallel build
++do-build:
++	@cd ${WRKSRC} && ${SETENV} ${MAKE_ENV} ${MAKE_CMD} \
++		${MAKE_FLAGS} ${MAKEFILE} ${MAKE_ARGS} ${ALL_TARGET}
++
+ .if ${PORT_OPTIONS:MTZUPDATE}
+ pre-install:
+ 	@# Update time zones
+@@ -180,8 +176,8 @@ do-install:
  		${CHOWN} -h -R ${BINOWN}:${BINGRP} $$dir; \
  		${FIND} $$dir -type f -exec ${CHMOD} ${BINMODE} "{}" \; ; \
  	done
