x11-servers/xorg-server: Disable AIGLX by default
* Many of the existing 3D drivers in graphics/libGL are not built due
  to missing gallium support

* xorg-server 1.12 crashes when trying to load nonexistent 3D drivers

* Avoid the crashes in the default configuration by disabling AIGLX support

* This setting can be overriden by adding  Option "AIGLX"  "TRUE"
  in the ServerFlags section of xorg.conf

--- a/ports/x11-servers/xorg-server/Makefile.DragonFly
+++ b/ports/x11-servers/xorg-server/Makefile.DragonFly
@@ -4,6 +4,7 @@ OPTIONS_EXCLUDE+= HAL
 
 .if defined(WITH_NEW_XORG)
 EXTRA_PATCHES+= ${DFLY_PATCHDIR}/extra-newxorg-hw_xfree86_os-support_xf86__OSlib.h
+EXTRA_PATCHES+= ${DFLY_PATCHDIR}/extra-newxorg-hw_xfree86_common_xf86Config.c
 .else
 EXTRA_PATCHES+= ${DFLY_PATCHDIR}/extra-oldxorg-hw_xfree86_os-support_xf86__OSlib.h
 .endif
