--- a/ports/sysutils/etc_os-release/diffs/Makefile.diff
+++ b/ports/sysutils/etc_os-release/diffs/Makefile.diff
@@ -20,7 +20,7 @@
 -		'BUG_REPORT_URL=https://bugs.freebsd.org'
 +		'ID=dragonfly\0'$\
 +		'ANSI_COLOR="0;32"\0'$\
-+		'PRETTY_NAME="DragonFly ${VERSION}"\0'$\
++		'PRETTY_NAME="DragonFly BSD ${VERSION}"\0'$\
 +		'CPE_NAME=cpe:/o:dragonflybsd:dragonfly:${VERSION_ID}\0'$\
 +		'SUPPORT_URL=http://chat.efnet.org:9090/?nick=dflynick&channels=%23dragonflybsd&Login=Login\0'$\
 +		'HOME_URL=https://www.dragonflybsd.org/\0'$\
