--- a/ports/devel/ispc/Makefile.DragonFly
+++ b/ports/devel/ispc/Makefile.DragonFly
@@ -1,7 +1,5 @@
-USES+=		ncurses
-CPPFLAGS+=	-I${NCURSESINC}
-LDFLAGS+=	-L${NCURSESLIB}
+USES+=	ncurses
 
 dfly-patch:
-	${REINPLACE_CMD} -e 's|-lcurses|-L${PREFIX}/lib -lncurses|' \
-		${WRKSRC}/Makefile
+	${REINPLACE_CMD} -e 's@ curses@ ncurses@g'	\
+		${WRKSRC}/CMakeLists.txt
