--- a/ports/emulators/rpcs3/Makefile.DragonFly
+++ b/ports/emulators/rpcs3/Makefile.DragonFly
@@ -1,3 +1,9 @@
-# XXX smth not right with atomics in gcc80
-# CMakeFiles/rpcs3.dir/Emu/Cell/SPUThread.cpp.o:SPUThread.cpp:function SPUThread::cpu_init(): error: undefined reference to '__atomic_store_16'
+
 CXXFLAGS:=	${CXXFLAGS:N*macro-redefined}
+
+# zrj: force use CMPXCHG16B, this excludes several early x86_64 cpus
+CXXFLAGS+=	-mcx16
+
+dfly-patch:
+	${REINPLACE_CMD} -e '/target_link_libraries(rpcs3_emu PUBLIC -latomic)/d' \
+		${WRKSRC}/rpcs3/Emu/CMakeLists.txt
