--- a/ports/devel/gsoap/Makefile.DragonFly
+++ b/ports/devel/gsoap/Makefile.DragonFly
@@ -1,1 +1,6 @@
-USES+= alias
+CFLAGS+=	-I${OPENSSLINC}
+LDFLAGS+=	-L${OPENSSLLIB}
+
+dfly-patch:
+	${REINPLACE_CMD} -e 's@\(\*-\*-freebsd\*\))@\1|*-*-dragonfly*)@g'	\
+		${WRKSRC}/configure.ac
