--- a/ports/lang/erlang-runtime17/dragonfly/patch-erts_configure.in
+++ b/ports/lang/erlang-runtime17/dragonfly/patch-erts_configure.in
@@ -1,11 +1,11 @@
---- erts/configure.orig	2017-06-20 18:56:09 UTC
-+++ erts/configure
-@@ -46086,7 +46086,7 @@ case $host_os in
+--- erts/configure.in.orig	2018-10-11 19:08:41 UTC
++++ erts/configure.in
+@@ -3848,7 +3848,7 @@ case $host_os in
  			DED_LDFLAGS="-m32 $DED_LDFLAGS"
  		fi
- 	;;
+ 	;;	
 -	freebsd*)
-+	dragonfly*|freebsd*)
++	freebsd*|dragonfly*)
  		DED_LD="$CC"
  		DED_LD_FLAG_RUNTIME_LIBRARY_PATH="$CFLAG_RUNTIME_LIBRARY_PATH"
  		DED_LDFLAGS="-shared"
