--- a/ports/audio/ardour/Makefile.DragonFly
+++ b/ports/audio/ardour/Makefile.DragonFly
@@ -1,11 +1,9 @@
 USES+= alias
 
-# courtesy from boost
-USE_CXXSTD= c++11
-
 # enforce movq and friends is asm
 CFLAGS+= -DUSE_X86_64_ASM
 
 dfly-patch:
 	${REINPLACE_CMD} -e 's@-DNO_POSIX_MEMALIGN@@g'	\
+			 -e 's@no-c++11-narrowing@no-narrowing@g' \
 		${WRKSRC}/SConstruct
