--- a/ports/audio/libcoverart/Makefile.DragonFly
+++ b/ports/audio/libcoverart/Makefile.DragonFly
@@ -1,4 +1,7 @@
-# [-Werror=class-memaccess] [-Werror=format-overflow=]
+USE_CXXSTD:=	gnu++11
+
 dfly-patch:
-	${REINPLACE_CMD} -e 's/-Werror[[:>:]]//g'	\
-		${WRKSRC}/*/CMakeLists.txt
+	${REINPLACE_CMD} -e 's@-Werror @ @g' \
+		${WRKSRC}/examples/CMakeLists.txt \
+		${WRKSRC}/src/CMakeLists.txt \
+		${WRKSRC}/tests/CMakeLists.txt
