--- a/ports/emulators/citra/Makefile.DragonFly
+++ b/ports/emulators/citra/Makefile.DragonFly
@@ -1,3 +1,3 @@
-dfly-patch:
-	${REINPLACE_CMD} -e 's|__FreeBSD__|__DragonFly__|' \
-		 ${WRKSRC}/externals/cryptopp/cryptopp/config.h
+
+# no pulse
+OPTIONS_DEFAULT:= ${OPTIONS_DEFAULT:NPULSEAUDIO}
