games/freedoko: Regen patches.

--- a/ports/games/freedoko/Makefile.DragonFly
+++ b/ports/games/freedoko/Makefile.DragonFly
@@ -3,3 +3,5 @@ DOS2UNIX_WRKSRC=	${WRKSRC:H}
 
 dfly-patch:
 	${LN} -sv ${WRKSRC}/logo.free.png ${WRKSRC}/logo.png
+	${REINPLACE_CMD} -e 's@FreeBSD@DragonFly@' \
+		${WRKSRC}/Makefile.os
