--- a/ports/net-mgmt/driftnet/Makefile.DragonFly
+++ b/ports/net-mgmt/driftnet/Makefile.DragonFly
@@ -1,16 +1,6 @@
 
-# drop inline attributes(funtions used outside source scope too)
-# XXX investigate how that even works with clang
 dfly-patch:
-	${REINPLACE_CMD} -e '/get_tmpdir/s@inline const@const@g'	\
-		${WRKSRC}/src/tmpdir.c	\
-		${WRKSRC}/src/tmpdir.h
-	${REINPLACE_CMD} -e '/get_default_interface/s@inline char@char@g'	\
-			 -e '/packetcapture_dispatch/s@inline void@void@g'	\
-		${WRKSRC}/src/packetcapture.c	\
-		${WRKSRC}/src/packetcapture.h
-	${REINPLACE_CMD} -e "s/__FreeBSD__/__DragonFly__/" \
-		${WRKSRC}/src/pid.c \
-		${WRKSRC}/src/layer2.c \
-		${WRKSRC}/src/layer3.c \
-		${WRKSRC}/src/connection.c
+	${REINPLACE_CMD} -e 's@\(freebsd\*\))@\1|dragonfly*)@g' \
+		${WRKSRC}/configure.ac
+	${REINPLACE_CMD} -e 's@\(D__FAVOR_BSD \)@\1 -D__FreeBSD__=13 @' \
+		${WRKSRC}/src/Makefile.am
