editors/libreoffice: Regen patches
 Add some more patches i noticed.  For now disable JAVA option
 because during build it uses scary amounts of javodoc all over the
 place.  Option does not loose too much but better for bulks
 Also, add skia contrib patch to be applied on runtime and deal with
 calc c++'isms in abs() abuse.

--- a/ports/editors/libreoffice/diffs/Makefile.diff
+++ b/ports/editors/libreoffice/diffs/Makefile.diff
@@ -1,8 +1,8 @@
---- Makefile.orig	2015-09-28 22:44:12 UTC
+--- Makefile.orig	2021-12-13 10:52:12 UTC
 +++ Makefile
-@@ -284,7 +284,14 @@ CXXFLAGS_WARN=	-Woverloaded-virtual -Wno
- CXXFLAGS_WARN+=	-Wno-unused-local-typedefs
- .endif
+@@ -312,7 +312,14 @@ LLD_UNSAFE=	yes
+ .if ${CHOSEN_COMPILER_TYPE} == clang
+ CXXFLAGS_WARN=	-Woverloaded-virtual -Wno-unused-parameter -Wno-unused-local-typedefs
  .else
 -CXXFLAGS_WARN=	-Wshadow -Woverloaded-virtual
 +CXXFLAGS_WARN=	-Wno-deprecated-declarations \
@@ -12,7 +12,7 @@
 +		-Wno-unused-local-typedefs \
 +		-Wno-unused-variable \
 +		-Wno-ignored-qualifiers \
-+		-Woverloaded-virtual
++		-Wshadow -Woverloaded-virtual
  .endif
  
- pre-configure:
+ post-patch:
