--- a/ports/sysutils/bareos19-server/Makefile.DragonFly
+++ b/ports/sysutils/bareos19-server/Makefile.DragonFly
@@ -12,6 +12,19 @@ dfly-patch:
 		${WRKSRC}/core/cmake/BareosCheckIncludes.cmake
 
 # to avoid orphans
-.if ${PKGNAMESUFFIX} == "18-client"
-PLIST_FILES+=	lib/bareos/plugins/test-plugin-fd.so
+.if ${PKGNAMESUFFIX} == "19-server"
+PLIST_FILES+=	${ETCDIR}/bareos-dir.d/user/...
+.endif
+
+.if ${PKGNAMESUFFIX} == "19-client" && defined(PYTHON_PLUGIN)
+PLIST_FILES+=	${ETCDIR}/python-ldap-conf.d/bareos-dir.d/fileset/... \
+		${ETCDIR}/python-ldap-conf.d/bareos-dir.d/job/...
+.endif
+
+dfly-install:
+.if ${PKGNAMESUFFIX} == "19-client" && defined(PYTHON_PLUGIN)
+	${TOUCH} ${STAGEDIR}${ETCDIR}/python-ldap-conf.d/bareos-dir.d/fileset/...
+	${TOUCH} ${STAGEDIR}${ETCDIR}/python-ldap-conf.d/bareos-dir.d/job/...
+.elif ${PKGNAMESUFFIX} == "19-server"
+	${TOUCH} ${STAGEDIR}${ETCDIR}/bareos-dir.d/user/...
 .endif
