--- a/ports/devel/stack/diffs/Makefile.diff
+++ b/ports/devel/stack/diffs/Makefile.diff
@@ -1,5 +1,11 @@
---- Makefile.orig	2021-12-13 10:52:12 UTC
+--- Makefile.orig	2024-02-09 23:47:30 UTC
 +++ Makefile
-@@ -198 +198 @@
--.if ${OSVERSION} >= 1300078 && ${ARCH} != powerpc64
-+.if ${OPSYS} == FreeBSD && ${OSVERSION} >= 1300078 && ${ARCH} != powerpc64
+@@ -209,7 +209,7 @@ LLVM_VERSION=	10
+ RUN_DEPENDS+=	llc${LLVM_VERSION}:devel/llvm${LLVM_VERSION}
+ .endif
+ 
+-.if ${ARCH} != powerpc64
++.if ${OPSYS} == FreeBSD && ${ARCH} != powerpc64
+ LIB_DEPENDS+=	libncursesw.so.8:misc/compat12x
+ .endif
+ 
