--- a/ports/editors/xcoral/diffs/Makefile.diff
+++ b/ports/editors/xcoral/diffs/Makefile.diff
@@ -1,16 +1,15 @@
---- Makefile.orig	2021-01-17 19:43:01 UTC
+--- Makefile.orig	2024-02-09 23:51:44 UTC
 +++ Makefile
-@@ -19,7 +19,6 @@ USES=		bison compiler:c11 xorg
+@@ -19,17 +19,12 @@ USES=		bison compiler:c11 localbase:ldfl
  USE_XORG=	x11
  GNU_CONFIGURE=	yes
  CONFIGURE_ARGS=	--libdir=${PREFIX}/share
 -LIBS+=		-lgnuregex
- LDFLAGS+=	-L${LOCALBASE}/lib
- CFLAGS+=	-isystem ${LOCALBASE}/include
  EXTRACT_AFTER_ARGS=	--exclude BR_Parser.[ch]
-@@ -34,10 +33,6 @@ OPTIONS_DEFINE=	DOCS
- LIB_DEPENDS+=	libgnuregex.so.[6-9]:devel/libgnuregex
- .endif
+ 
+ PLIST_SUB=	VERSION="${PORTVERSION}"
+ 
+ OPTIONS_DEFINE=	DOCS
  
 -post-patch:
 -	@${REINPLACE_CMD} -e 's| regex\.[co] | |g ; \
