--- a/ports/games/doomlegacy/diffs/Makefile.diff
+++ b/ports/games/doomlegacy/diffs/Makefile.diff
@@ -1,6 +1,6 @@
---- Makefile.orig	2019-12-22 19:53:13 UTC
+--- Makefile.orig	2024-02-09 23:53:07 UTC
 +++ Makefile
-@@ -15,7 +15,7 @@ COMMENT=	Improved and extended version o
+@@ -13,7 +13,7 @@ WWW=		https://doomlegacy.sourceforge.net
  
  LICENSE=	GPLv2
  
@@ -8,13 +8,4 @@
 +USES=		gl alias gmake sdl tar:bzip2
  USE_GL=		gl glu
  USE_SDL=	mixer sdl
- 
-@@ -46,7 +46,7 @@ post-patch: .SILENT
- .endif
- 
- pre-build:
--	${ECHO_CMD} CC_ENVIRONMENT=1 OS=${OPSYS:tu} | \
-+	${ECHO_CMD} CC_ENVIRONMENT=1 OS=FREEBSD | \
- 		${XARGS} -n 1 >> ${BUILD_WRKSRC}/make_options
- 	${MAKE_CMD} -C ${BUILD_WRKSRC} dirs
- 	${MAKE_CMD} -C ${BUILD_WRKSRC} depend
+ MAKE_ARGS=	OS=${OPSYS:tu}
