--- a/ports/graphics/mesa-gallium-va/diffs/Makefile.diff
+++ b/ports/graphics/mesa-gallium-va/diffs/Makefile.diff
@@ -1,10 +1,12 @@
---- Makefile.orig	2024-02-01 18:44:45 UTC
+--- Makefile.orig	2024-02-09 23:55:17 UTC
 +++ Makefile
-@@ -25,7 +25,6 @@ X11_USE=		xorg=xorgproto,x11,xcb,xdamage
+@@ -26,8 +26,7 @@ X11_USE=		xorg=xorgproto,x11,xcb,xdamage
+ .include <bsd.port.options.mk>
  .include "${.CURDIR:H:H}/graphics/mesa-dri/Makefile.common"
  
- MESON_ARGS+=	-Ddri-drivers="" \
--		-Dvideo-codecs="vc1dec,h264dec,h264enc,h265dec,h265enc" \
- 		-Dgallium-drivers="radeonsi,r600" \
+-MESON_ARGS+=	-Dvideo-codecs="vc1dec,h264dec,h264enc,h265dec,h265enc" \
+-		-Dgallium-drivers="radeonsi,r600" \
++MESON_ARGS+=	-Dgallium-drivers="radeonsi,r600" \
  		-Dvulkan-drivers="" \
+ 		-Dandroid-libbacktrace=disabled \
  		-Dgallium-vdpau=disabled \
