--- a/ports/graphics/pcl-pointclouds/diffs/Makefile.diff
+++ b/ports/graphics/pcl-pointclouds/diffs/Makefile.diff
@@ -1,10 +1,12 @@
---- Makefile.orig	2022-06-13 20:57:10 UTC
+--- Makefile.orig	2024-02-09 23:56:49 UTC
 +++ Makefile
-@@ -30,7 +30,6 @@ LIB_DEPENDS=	libboost_system.so:devel/bo
+@@ -24,8 +24,7 @@ NOT_FOR_ARCHS_REASON=	common/include/pcl
+ LIB_DEPENDS=	libboost_system.so:devel/boost-libs \
  		libflann_cpp.so:math/flann \
  		libfreetype.so:print/freetype2 \
- 		liblz4.so:archivers/liblz4 \
--		libpcap.so:net/libpcap \
- 		libtiff.so:graphics/tiff
+-		liblz4.so:archivers/liblz4 \
+-		libpcap.so:net/libpcap
++		liblz4.so:archivers/liblz4
  
- USES=		cmake:testing compiler:c++14-lang eigen:3 jpeg localbase:ldflags python xorg
+ USES=		cmake:testing compiler:c++14-lang eigen:3 localbase:ldflags python xorg
+ USE_XORG=	x11 xext xt ice sm
