--- a/ports/lang/python311/diffs/Makefile.diff
+++ b/ports/lang/python311/diffs/Makefile.diff
@@ -1,15 +1,11 @@
---- Makefile.orig	2023-04-11 19:10:15 UTC
+--- Makefile.orig	2024-02-10 00:55:56 UTC
 +++ Makefile
-@@ -45,10 +45,10 @@ PLIST_SUB=		ABI=${ABIFLAGS} \
- 			XY=${PYTHON_SUFFIX} \
- 			XYDOT=${PYTHON_VER} \
- 			XYZDOT=${DISTVERSION:C/[a-z].*//} \
+@@ -42,7 +42,7 @@ SUB_LIST=		PYTHON_SUFFIX=${PYTHON_SUFFIX
+ 
+ PLIST_SUB=		ABI=${ABIFLAGS} \
+ 			DISTVERSION=${DISTVERSION} \
 -			OSMAJOR=${OSVERSION:C/([0-9]*)[0-9]{5}/\1/}		# For plat-freebsd* in pkg-plist. https://bugs.python.org/issue19554
-+			OSMAJOR=${DFLYVERSION:C/([0-9]*)[0-9]{5}/\1/}
++			OSMAJOR=${DFLYVERSION:C/([0-9]*)[0-9]{5}/\1/}		# For plat-freebsd* in pkg-plist. https://bugs.python.org/issue19554
  
  OPTIONS_DEFINE=		DEBUG IPV6 LIBMPDEC LTO NLS PYMALLOC
--OPTIONS_DEFAULT=	LIBMPDEC LTO PYMALLOC
-+OPTIONS_DEFAULT=	LIBMPDEC PYMALLOC
- OPTIONS_EXCLUDE_riscv64=	LTO
- OPTIONS_RADIO=		HASH
- OPTIONS_RADIO_HASH=	FNV SIPHASH
+ OPTIONS_DEFAULT=	LIBMPDEC LTO PYMALLOC
