--- a/ports/sysutils/slurm-wlm/diffs/Makefile.diff
+++ b/ports/sysutils/slurm-wlm/diffs/Makefile.diff
@@ -1,11 +1,11 @@
---- Makefile.orig	2021-01-20 16:57:07.876654000 +0100
-+++ Makefile	2021-01-24 15:33:38.945915000 +0100
-@@ -83,7 +83,7 @@
- DOCSDIR=	${PREFIX}/share/doc/${PORTNAME}-${DISTVERSION}
- 
- CFLAGS+=	-I${WRKSRC}/slurm -I${LOCALBASE}/include -fcommon
+--- Makefile.orig	2024-02-24 12:15:00 UTC
++++ Makefile
+@@ -91,7 +91,7 @@ CFLAGS+=	-I${WRKSRC}/slurm -I${LOCALBASE
+ 		-I${LOCALBASE}/include/level_zero		\
+ 		-I${LOCALBASE}/include/librdkafka		\
+ 		-fcommon -D__BSD_VISIBLE=1
 -LDFLAGS+=	-L${LOCALBASE}/lib -lsysinfo -lprocstat -fcommon
 +LDFLAGS+=	-L${LOCALBASE}/lib -lsysinfo -fcommon
  
- # Hack around nonfunctional --disable-gtktest flag
- pre-configure-GUI-off:
+ PROC2FIX=	common/callerid.c common/fd.c common/fetch_config.c	\
+ 		interfaces/proctrack.c	\
