--- a/ports/x11/qimageblitz/diffs/Makefile.diff
+++ b/ports/x11/qimageblitz/diffs/Makefile.diff
@@ -1,8 +1,8 @@
---- Makefile.orig	2022-09-10 14:41:06 UTC
+--- Makefile.orig	2024-02-24 12:26:25 UTC
 +++ Makefile
-@@ -21,16 +21,4 @@ USE_CXXSTD=	gnu++98
+@@ -19,16 +19,4 @@ USE_CXXSTD=	gnu++98
  SVN_URL=	svn://anonsvn.kde.org/home/kde/trunk/kdesupport/qimageblitz
- SVN_REVISION=	1515099
+ SVN_REVISION=	1548172
  
 -do-fetch:
 -	@if [ "${FORCE_FETCH_ALL}" = "true" ] || ! [ -f "${DISTDIR}/${DIST_SUBDIR}/${DISTNAME}${EXTRACT_SUFX}" ]; then \
@@ -12,7 +12,7 @@
 -	    (cd ${PORTNAME}-${DISTVERSIONFULL} && ${RM} -r .svn) && \
 -	    ${FIND} ${PORTNAME}-${DISTVERSIONFULL} -and -exec ${TOUCH} -h -d 1970-01-01T00:00:00Z {} \; && \
 -	    ${FIND} ${PORTNAME}-${DISTVERSIONFULL} -print0 | LC_ALL=C ${SORT} -z | \
--	        ${TAR} czf ${PORTNAME}-${DISTVERSIONFULL}${EXTRACT_SUFX} --format=bsdtar --uid 0 --gid 0 --options gzip:!timestamp --no-recursion --null -T - && \
+-	        ${TAR} czf ${PORTNAME}-${DISTVERSIONFULL}${EXTRACT_SUFX} --format=ustar --uid 0 --gid 0 --options gzip:!timestamp --no-recursion --null -T - && \
 -	    ${RM} -r ${PORTNAME}-${DISTVERSIONFULL}; \
 -	fi
 -
