--- a/ports/devel/abseil/diffs/Makefile.diff
+++ b/ports/devel/abseil/diffs/Makefile.diff
@@ -1,10 +1,10 @@
---- Makefile.orig	2021-07-23 13:58:26 UTC
+--- Makefile.orig	2024-03-03 00:22:05 UTC
 +++ Makefile
-@@ -16,8 +16,4 @@ GH_PROJECT=	${PORTNAME}-cpp
+@@ -15,8 +15,4 @@ GH_PROJECT=	${PORTNAME}-cpp
  CMAKE_ARGS=	-DBUILD_SHARED_LIBS:BOOL=ON \
  		-DCMAKE_CXX_STANDARD=17 # force the same highest C++ standard because of ABI differences: see https://github.com/abseil/abseil-cpp/issues/819
  
--_GET_SOVER=	${GREP} SOVERSION ${WRKSRC}/CMake/AbseilHelpers.cmake \
+-_GET_SOVER=	${GREP} SOVERSION ${WRKSRC}/CMake/AbseilHelpers.cmake 2>/dev/null \
 -		| ${CUT} -d\" -f2
 -PLIST_SUB+=	LIBSUFX=${_GET_SOVER:sh}
 -
